# ddns

./: .gitignore  Makefile.am  README.md  configure.ac
include/ddns/: ddns.h
src/: Makefile.am  ddns.c  ddnsclient.c  debug.h  dyndns2.c  freedns.c  http.c  http.h  list.h
